Render scene context error. #29030

Closed
opened 2011-10-26 02:37:11 +02:00 by Eugenio Pignataro · 3 comments

%%%Ubuntu x64 11.10.
Release 41268.

Scene example: http://www.pasteall.org/blend/9352

I need render all scenes into Blender File without batch render.

When I run the command bpy.ops.render.render(animation=True, write_still=True, scene="TWO") Blender render only the scene in the screen context.
I believe that the program ignores the "scene" argument in the ops.

I tried:

  • Change the bpy.context.screen.scene with the Python "for in". The change of context was ignored.

This is a bug?

Thanks a lot!

%%%

%%%Ubuntu x64 11.10. Release 41268. Scene example: http://www.pasteall.org/blend/9352 I need render all scenes into Blender File without batch render. When I run the command bpy.ops.render.render(animation=True, write_still=True, scene="TWO") Blender render only the scene in the screen context. I believe that the program ignores the "scene" argument in the ops. I tried: - Change the bpy.context.screen.scene with the Python "for in". The change of context was ignored. This is a bug? Thanks a lot! %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report. Regarding changing scenes, this is done delayed when the operator gives control back to the window manager, it's a known limitation.%%%

%%%Fix in svn, thanks for the report. Regarding changing scenes, this is done delayed when the operator gives control back to the window manager, it's a known limitation.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29030
No description provided.