Fix #29030: render operator only used scene property if layers was used, now it is possible to specify the scene without the layer too.